fix cropper error, fix localisation input

--- a/matchaFront/src/app/profile/profile.component.scss
+++ b/matchaFront/src/app/profile/profile.component.scss
@@ -194,6 +194,7 @@
       font-family: Montserrat;
       background: var(--background-color-primary);
       color: var(--color-text);
+      width: auto;
     }
 
     .input-loca {
